# CalR-Guard

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE_NOTE.md  README.md  SECURITY.md  app.py  pyproject.toml  requirements.txt  run_app.py  run_app.sh  run_cli.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
calr_guard/: __init__.py  cli.py  exporter.py  io_utils.py  models.py  pipeline.py  vendor.py
docs/: CITATION.cff.template  GITHUB_REPO_SETUP.md  HOW_IT_WAS_BUILT.md  PROFESSOR_BRIEF.md  PUBLIC_RELEASE_CHECKLIST.md  PUBLISH_TO_GITHUB.md  SEND_NOTES.md
examples/: config.example.yml  demo_tse_like.csv  exclusions.example.json  mapping.example.json  project.example.yml  subject_sheet.example.csv
scripts/: init_git.bat  init_git.sh  push_to_github.bat  push_to_github.sh
tests/: test_pipeline.py
